# headroom

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  eval.yml
ARCHITECTURE/: index.html
LATENCY_BENCHMARKS/: index.html
LIMITATIONS/: index.html
agno/: index.html
api/: index.html
benchmarks/: bench_latency.py  bench_transforms.py  conftest.py  dynamic_detector_benchmark.py  index.html  run_benchmarks.py
ccr/: index.html
compression/: index.html
configuration/: index.html
docs/: ARCHITECTURE.md  HEADROOM_DEEP_ANALYSIS.md  HEADROOM_FEATURES.md  LATENCY_BENCHMARKS.md  LIMITATIONS.md  PATH_TO_10_OUT_OF_10.md  README.md  configuration.md  index.md  integration-guide.md  macos-deployment.md  mcp.md  proxy.md  transforms.md
errors/: index.html
examples/: README.md  anthropic_example.py  langchain_before_after.py  real_world_eval.py  real_world_openai_eval.py  smart_vs_naive_eval.py  strands_bedrock_demo.py
examples/deployment/macos-launchagent/: README.md
getting-started/: index.html
headroom/: __init__.py  cli.py  client.py  compress.py  config.py  exceptions.py  parser.py
headroom/backends/: anyllm.py
headroom/cache/: __init__.py  anthropic.py  base.py  compression_store.py  dynamic_detector.py  google.py  openai.py  registry.py  semantic.py
headroom/cache/backends/: __init__.py
headroom/ccr/: __init__.py  batch_processor.py  batch_store.py  mcp_server.py  response_handler.py  tool_injection.py
headroom/cli/: __init__.py  evals.py  main.py  mcp.py  memory.py  proxy.py
headroom/evals/: README.md  __init__.py  __main__.py  batch_compression_eval.py  datasets.py  html_extraction.py  metrics.py
headroom/evals/reports/: __init__.py
headroom/evals/runners/: __init__.py  before_after.py  compression_only.py
headroom/image/: trained_router.py
headroom/integrations/: asgi.py  langchain.py  litellm_callback.py  mcp.py
headroom/integrations/langchain/: chat_model.py
headroom/integrations/strands/: __init__.py  providers.py
headroom/memory/: bridge_config.py
headroom/memory/adapters/: __init__.py  embedders.py  hnsw.py  sqlite_vector.py
headroom/memory/backends/: local.py
headroom/models/: __init__.py  ml_models.py  registry.py
headroom/prediction/: feature_extractor.py
headroom/providers/: anthropic.py  cohere.py  google.py  litellm.py  openai.py
headroom/proxy/: memory_handler.py  server.py
headroom/relevance/: bm25.py  embedding.py  hybrid.py
headroom/reporting/: generator.py
headroom/telemetry/: collector.py  models.py  toin.py
headroom/tokenizers/: base.py  estimator.py  registry.py  tiktoken_counter.py
headroom/transforms/: __init__.py  anchor_selector.py  cache_aligner.py  content_detector.py  content_router.py  diff_compressor.py  html_extractor.py  intelligent_context.py  llmlingua_compressor.py  log_compressor.py  pipeline.py  rolling_window.py  search_compressor.py  smart_crusher.py  text_compressor.py  tool_crusher.py
image-compression/: index.html
integration-guide/: index.html
langchain/: index.html
learn/: index.html
llmlingua/: index.html
macos-deployment/: index.html
mcp/: index.html
memory/: index.html
metrics/: index.html
plans/dynamic-smart-crusher/: index.html
proxy/: index.html
quickstart/: index.html
sdk/: index.html
search/: search_index.json
tests/: conftest.py  test_acceptance.py  test_ccr.py  test_ccr_tool_injection.py  test_config.py  test_critical_fixes.py  test_critical_gaps.py  test_crushability.py  test_hnsw_only.py  test_memory_system.py  test_models.py  test_parser.py  test_proxy_ccr.py  test_proxy_compression_headers.py  test_proxy_intelligent_context.py  test_proxy_openai_responses_integration.py  test_proxy_passthrough_integration.py  test_proxy_scalability.py  test_quality_retention.py  test_sqlite_vector_index.py  test_telemetry.py  test_text_compressors.py  test_toin.py  test_toin_fixes.py  test_toin_full_integration.py  test_toin_integration.py  test_tokenizers.py
tests/test_cache/: test_anthropic.py  test_base.py  test_client_integration.py  test_dynamic_detector.py  test_google.py  test_openai.py  test_registry.py  test_semantic.py
tests/test_cli/: test_mcp.py
tests/test_compression/: test_evals.py
tests/test_evals/: test_html_extraction_eval.py  test_html_oss_benchmarks.py
tests/test_integrations/: test_langchain.py  test_langchain_evals.py  test_mcp.py
tests/test_memory/: test_core_operations.py  test_factory.py  test_hierarchical.py
tests/test_providers/: test_anthropic.py  test_openai.py  test_universal.py
tests/test_storage/: test_sqlite.py
tests/test_transforms/: test_anchor_selector.py  test_cache_aligner.py  test_content_router.py  test_diff_compressor.py  test_html_extractor.py  test_intelligent_context.py  test_llmlingua_compressor.py  test_rolling_window.py  test_smart_crusher.py  test_tool_crusher.py  test_universal_json_crush.py
text-compression/: index.html
transforms/: index.html
troubleshooting/: index.html
